portfolio page mobile end

--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -1,9 +1,9 @@
 {
     "navbar": {
-        "home": "Home",
-        "services": "Services",
-        "portfolio": "Portfolio",
-        "contact": "Contact",
+        "home": "Bosh sahifa",
+        "services": "Servislar",
+        "portfolio": "Portfoliyo",
+        "contact": "Kontakt",
         "contact_button": "Bog'lanish"
     },
     "hero": {
@@ -17,26 +17,60 @@
         "about_text": "Nima uchun aynan biz",
         "about_title": "Nima uchun aynan Manasoft?",
         "about_subtitle": "Biznesingizni samarali rivojlantirish uchun ishonchli IT hamkor kerakmi? Manasoft sizga zamonaviy, tezkor va ishonchli yechimlar taqdim etadi!",
-        "about_card1_title": "UX tadqiqotlar",
-        "about_card1_text": "Foydalanuvchi tadqiqoti orqali biznesingizni yanada rivojlantirish.",
-        "about_card2_title": "Manasoft – IT yechimlaringiz markazi",
-        "about_card2_text": "Manasoft – bu innovatsion IT kompaniya, biznesingiz uchun Telegram botlar, mobil ilovalar va veb-saytlar yaratish bo‘yicha eng ishonchli hamkoringiz!",
-        "about_card3_title": "Bizning mijozlarimiz",
-        "about_card3_text": "Manasoft bilan ishlaydigan har bir mijoz – biz uchun muhim!",
-        "about_card4_title": "Texnologiyalar olamiga yo‘lingiz",
-        "about_card4_text": "Manasoft Telegram botlar, mobil ilovalar, veb-saytlar hamda CRM va ERP tizimlari orqali biznesingizni avtomatlashtirib, uni keyingi bosqichga olib chiqishga yordam beradi. Bizning ishonchli va tezkor IT yechimlarimiz iOS va Android platformalari uchun sifatli ilovalar yaratish, zamonaviy veb-saytlar ishlab chiqish hamda biznes jarayonlarini optimallashtirishga qaratilgan.",
-        "about_card5_title": "Biznesingizni birga rivojlantiramiz!",
-        "about_card5_text": "Manasoft sizga IT yechimlari bo‘yicha ishonchli hamkor bo‘lishga tayyor! Telegram botlar, mobil ilovalar, veb-saytlar va avtomatlashtirilgan tizimlar orqali biznesingizni keyingi bosqichga olib chiqing.",
-        "about_card5_button": "Biz bilan bog'laning"
+        "about_card1_count": "30",
+        "about_card1_text": "Tugallangan loyihalar",
+        "about_card2_count": "28",
+        "about_card2_text": "Umumiy raqam foydalanuvchilar",
+        "about_card3_count": "5",
+        "about_card3_text": "Tajriba yillari dan sohasida",
+        "about_card4_count": "11",
+        "about_card4_text": "Telegramma botlar",
+        "about_card5_count": "16",
+        "about_card5_text": "Mobil ilovalar",
+        "about_card6_count": "4",
+        "about_card6_text": "Veb platformalar"
+    },
+    "customers": {
+        "subtitle": "Mijozlar fikrlari",
+        "title": "Mijozlarimizning fikrlari",
+        "text": "Siz ham Manasoft tajribasidan foydalaning va biznesingizni keyingi bosqichga olib chiqing!",
+        "customer1_name": "Max Thompson (Creative Designer)",
+        "customer1_text": "Manasoft team has been amazing to work with! They developed a custom Telegram bot for us, which accelerated the process of providing services to our clients. Now we can serve our clients faster and more efficiently."
     },
     "services": {
-        "services_home_title": "Texnologiya va Tajribani Birlashtiring",
-        "services_home_text": "Bizning xizmatlar",
-        "services_home_card1_title": "Telegram botlar",
-        "services_home_card1_text": "Manasoft Telegram botlar, mobil ilovalar, veb-saytlar hamda CRM va ERP tizimlari orqali biznesingizni avtomatlashtirib, uni keyingi bosqichga olib chiqishga yordam beradi.",
+        "services_home_title1": "Texnologiya va Tajribani Birlashtiring",
+        "services_home_text1": "Bizning xizmatlar",
+        "services_home_title2": "Biznesingiz uchun mukammal IT yechimlar",
+        "services_home_text2": "Manasoft – IT dunyosida ishonchli hamkoringiz! Biz veb-sayt va mobil ilovalar va boshqa ilg‘or texnologik yechimlarni taklif qilamiz.",
+        "services_home_card1_title": "CRM/ERP Tizimlari",
+        "services_home_card1_text": "CRM va ERP tizimlari orqali jarayonlaringizni optimallashtiring, samaradorlikni oshiring va biznesingizni raqamlashtiring.",
         "services_home_card2_title": "Mobil ilovalar",
-        "services_home_card2_text": "Bizning ishonchli va tezkor IT yechimlarimiz iOS va Android platformalari uchun sifatli ilovalar yaratish, zamonaviy veb-saytlar ishlab chiqish hamda biznes jarayonlarini optimallashtirishga qaratilgan.",
-        "services_home_card3_title": "Veb-saytlar va tizimlar",
-        "services_home_card3_text": "Biznesingiz uchun eng optimal IT yechimlarni ishlab chiqamiz. O'ziga xos va qulay interfeyslar yaratish orqali mijozlar ehtiyojini qondiramiz."
+        "services_home_card2_text": "iOS va Android uchun zamonaviy va tezkor mobil ilovalar yaratamiz. Mahsulotingizni yangi bosqichga olib chiqing!",
+        "services_home_card3_title": "Telegram botlar",
+        "services_home_card3_text": "Telegram botlar orqali mijozlaringiz bilan  xizmatlarni avtomatlashtiring va biznesingizni rivojlantiring!",
+        "services_home_card4_title": "Veb saytlar",
+        "services_home_card4_text": "Biznesingizga mos, tezkor va zamonaviy veb-saytlar yaratamiz. Raqobatchilardan ajralib turish uchun biz bilan bog‘laning!",
+        "services_page_title": "Innovatsion IT yechimlar – Biznesingiz uchun eng yaxshi xizmatlar",
+        "services_page_text": "Manasoft IT kompaniyasi sifatli va innovatsion IT xizmatlarini taqdim etadi. CRM/ERP tizimlari, Telegram botlar, mobil ilovalar va veb-sayt yaratishgacha bo‘lgan keng ko‘lamli yechimlar bilan sizning biznesingizni rivojlantirishga yordam beramiz.",
+        "services": "Xizmatlar",
+        "services_page_card1_subtitle": "Mobil ilova",
+        "services_page_card1_title": "IOS va Android uchun zamonaviy mobil ilovalar",
+        "services_page_card1_text": "Mobil ilovalar biznesingizga mijozlar bilan yanada qulay aloqada bo‘lish imkonini beradi. Biz sizga tezkor, samarali va zamonaviy mobil ilovalar yaratib beramiz.",
+        "services_page_card1_xizmatlar": "iOS va Android ilovalar ishlab chiqish, Ilovalarni dizayn qilish va optimallashtirish, API va server bilan integratsiya, Ilovani App Store va Google Play'ga joylash",
+        "services_page_card2_subtitle": "Veb sayt yaratish",
+        "services_page_card2_title": "Jozibali, tezkor veb saytlar",
+        "services_page_card2_text": "Biznesingizni onlayn maydonda taqdim qilish uchun zamonaviy veb-saytlarga ehtiyoj sezayotgan bo‘lsangiz, Manasoft siz uchun eng yaxshi yechimni taqdim etadi.",
+        "services_page_card2_xizmatlar": "Korporativ va shaxsiy veb-saytlar, Internet-do‘kon va e-commerce saytlar, SEO optimizatsiya va tezkor yuklanish, Kontent boshqaruv tizimlari (CMS)",
+        "services_page_card3_subtitle": "Telegram bot",
+        "services_page_card3_title": "24/7 Avtomatlashtirilgan telegram botlar",
+        "services_page_card3_text": "Telegram botlari mijozlarga xizmat ko‘rsatish, savdo, axborot yetkazish va avtomatlashtirish uchun samarali vosita hisoblanadi. Biz sizning biznesingizga moslashgan aqlli botlarni ishlab chiqamiz.",
+        "services_page_card3_xizmatlar": "Buyurtmalarni qabul qiluvchi botlar, Savollarga avtomatik javob beruvchi botlar, To‘lov tizimlari bilan integratsiya, Ma’lumotlar bazasi bilan ishlash",
+        "services_page_card4_subtitle": "CRM/ERP tizimlari",
+        "services_page_card4_title": "Biznes jarayonlaringizni avtomatlashtiring",
+        "services_page_card4_text": "CRM va ERP tizimlari biznesingizni optimallashtirish, mijozlar bilan ishlash va jarayonlarni boshqarishda eng yaxshi yechimdir. Manasoft sizga shaxsiylashtirilgan va moslashtirilgan dasturiy ta’minot ishlab chiqadi.",
+        "services_page_card4_xizmatlar": "CRM tizimlarini ishlab chiqish va sozlash, ERP tizimlarini yaratish va integratsiya qilish, Mijozlar ma’lumotlarini boshqarish, Tahliliy va hisob-kitob tizimlari"
+    },
+    "workpage": {
+        "workpage_title": "Bizning ishlash jarayonimiz"
     }
 }
