--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -129,5 +129,29 @@
         "project_card2_text": "С помощью приложения вы сможете эффективно планировать встречи, вести учет взаимодействий и анализировать результаты в реальном времени.",
         "project_card3_title": "Планирование и контроль визитов",
         "project_card3_text": "Управление базой данных врачей и аптек. Подробные отчеты по каждому визиту, автоматизация рабочих процессов, мониторинг эффективности команды в реальном времени."
+    },
+    "question_page": {
+        "question_title": "Часто задаваемые вопросы",
+        "question_subtitle": "Интересные вопросы",
+        "question_text": "Если у вас есть какие-либо вопросы, не стесняйтесь обращаться к нам - мы всегда готовы помочь!",
+        "question_card1_text": "Сколько времени занимает разработка IT-проекта?",
+        "question_card1_answer": "Manasoft - это инновационная IT-компания, ваш самый надежный партнер по созданию Telegram-ботов, мобильных приложений и веб-сайтов для вашего бизнеса! Наша команда предоставляет клиентам эффективные решения, внедряя технологии в бизнес. Качество и оперативное обслуживание - наш главный приоритет!"
+    },
+    "contact_page": {
+        "title": "Связаться с нами",
+        "description": "Нужен надежный IT-партнер для эффективного развития вашего бизнеса? Manasoft предлагает вам современные, быстрые и надежные решения!",
+        "card_title": "Развивать ваш бизнес вместе!",
+        "card_text": "Команда Manasoft всегда готова связаться с вами! Свяжитесь с нами и выберите наилучшее решение для вашего бизнеса. Быстрый и профессиональный ответ гарантирован!",
+        "location": "г. Ташкент",
+        "fullName": "Ф.И.О",
+        "phone": "Номер телефона",
+        "message": "Сообщение",
+        "button_text": "Отправить сообщение",
+        "error": "Это поле необходимо заполнить!",
+        "fullName_error1": "Необходимо добавить не менее 5 символов.",
+        "fullName_error2": "Должна быть как минимум одна ЗАГЛАВНАЯ буква.",
+        "fullName_error3": "Должно быть как минимум одна строчная буква.",
+        "phone_error": "Номер телефона должен начинаться с +998 и иметь 12 номеров.",
+        "message_error": "Сообщение должно содержать не менее 10 символов."
     }
 }
